src/objects/Accounts_Receivable__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts Receivable</relationshipLabel>
        <relationshipName>Accounts_Receivable</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Aging10__c</fullName>
        <formula>Opportunity10__r.Aging__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Aging</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Aging2__c</fullName>
        <formula>Opportunity2__r.Aging__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Aging</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Aging3__c</fullName>
        <formula>Opportunity3__r.Aging__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Aging</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Balance_Due10__c</fullName>
        <formula>Opportunity10__r.Balance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Balance Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Balance_Due2__c</fullName>
        <formula>Opportunity2__r.Balance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Balance Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Balance_Due3__c</fullName>
        <formula>Opportunity3__r.Balance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Balance Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Case_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Number</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Accounts Receivable</relationshipLabel>
        <relationshipName>Accounts_Receivable</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Follow_up_Date__c</fullName>
        <label>Follow-up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Follow_up_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Follow-up Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoice10__c</fullName>
        <formula>Opportunity10__r.Invoice__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice2__c</fullName>
        <formula>Opportunity2__r.Invoice__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice3__c</fullName>
        <formula>Opportunity3__r.Invoice__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity10__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Accounts Receivable (Opportunity)</relationshipLabel>
        <relationshipName>Accounts_Receivable9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Accounts Receivable (Opportunity)</relationshipLabel>
        <relationshipName>Accounts_Receivable1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Accounts Receivable (Opportunity)</relationshipLabel>
        <relationshipName>Accounts_Receivable2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pd_Amount10__c</fullName>
        <formula>Opportunity10__r.Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pd Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pd_Amount2__c</fullName>
        <formula>Opportunity2__r.Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pd Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pd_Amount3__c</fullName>
        <formula>Opportunity3__r.Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pd Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Report10__c</fullName>
        <formula>Opportunity10__r.Report_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report2__c</fullName>
        <formula>Opportunity2__r.Report_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report3__c</fullName>
        <formula>Opportunity3__r.Report_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <label>Response</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes - Email</fullName>
                </value>
                <value>
                    <fullName>Yes - Phone</fullName>
                </value>
                <value>
                    <fullName>Yes - Hardmail</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Amount_Paid__c</fullName>
        <formula>Pd_Amount__c +  Pd_Amount2__c + Pd_Amount3__c +  Pd_Amount4__c  + Pd_Amount5__c +  Pd_Amount6__c  + Pd_Amount7__c +  Pd_Amount8__c + Pd_Amount9__c +  Pd_Amount10__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Balance_Due__c</fullName>
        <formula>Balance_Due__c + Balance_Due2__c + Balance_Due3__c + Balance_Due4__c + Balance_Due5__c + Balance_Due6__c + Balance_Due7__c + Balance_Due8__c + Balance_Due9__c + Balance_Due10__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Balance Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Accounts Receivable</label>
    <listViews>
        <fullName>Accounts_Receivable</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Total_Balance_Due__c</columns>
        <columns>Total_Amount_Paid__c</columns>
        <columns>Contact__c</columns>
        <columns>Account__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Comment__c</columns>
        <columns>Case_Number__c</columns>
        <columns>Follow_up_Needed__c</columns>
        <columns>Follow_up_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>Accounts Receivable</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AR-{0000000}</displayFormat>
        <label>Accounts Receivable Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Accounts Receivable</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>